--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,6 @@
         "asset-packagist": {
             "type": "composer",
             "url": "https://asset-packagist.org"
-        },
-        "upstream-configuration": {
-            "type": "path",
-            "url": "upstream-configuration"
         }
     },
     "config": {
@@ -29,6 +25,14 @@
         "preferred-install": "dist",
         "platform": {
             "php": "7.4"
+        },
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "composer/installers": true,
+            "cweagans/composer-patches": true,
+            "drupal/core-composer-scaffold": true,
+            "oomphinc/composer-installers-extender": true,
+            "zaporylie/composer-drupal-optimizations": true
         }
     },
     "require": {
