--- a/composer.json
+++ b/composer.json
@@ -66,11 +66,13 @@
         "centarro/commerce_kickstart": "^3.0",
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
-        "drupal/core-dev": "^9.1",
+        "drupal/commerce_demo": "3.0.x-dev",
         "drupal/core-composer-scaffold": "^9.1",
+        "drupal/core-dev": "^9.1",
         "drupal/default_content": "2.0.0-alpha1",
-        "pantheon-systems/drupal-integrations": "^9",
+        "drupal/search_api_pantheon": "^3.0",
         "drush/drush": "^10.3",
+        "pantheon-systems/drupal-integrations": "^9",
         "vlucas/phpdotenv": "^5.1",
         "webflo/drupal-finder": "^1.2",
         "webmozart/path-util": "^2.3"
