--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,7 @@
         "drupal/core-composer-scaffold": "^9.1",
         "drupal/core-dev": "^9.1",
         "drupal/default_content": "2.0.0-alpha1",
-        "drupal/search_api_pantheon": "^3.0",
+        "drupal/redis": "^1.5",
         "drush/drush": "^10.3",
         "pantheon-systems/drupal-integrations": "^9",
         "vlucas/phpdotenv": "^5.1",
